--- a/victormaster/masterm.css
+++ b/victormaster/masterm.css
@@ -1,5 +1,29 @@
-#select1 {width:150px; color:rgba(0, 0, 0, 0);}
+#select1, {width:150px; color:rgba(0, 0, 0, 0);}
 #select1:focus, #select1:focus {
+color:black;
+}
+.yellow {background:yellow;}
+.green {background:green}
+.blue {background:blue}
+.red {background:red;}
+.purple {background:purple;}
+.orange {background:orange;}
+
+
+#select2, {width:150px; color:rgba(0, 0, 0, 0);}
+#select2:focus, #select1:focus {
+color:black;
+}
+.yellow {background:yellow;}
+.green {background:green}
+.blue {background:blue}
+.red {background:red;}
+.purple {background:purple;}
+.orange {background:orange;}
+
+
+#select3, {width:150px; color:rgba(0, 0, 0, 0);}
+#select3:focus, #select1:focus {
 color:black;
 }
 .yellow {background:yellow;}
