Just before my brain melted over dropdown colors

--- a/MasterMindMatt/masterMind.css
+++ b/MasterMindMatt/masterMind.css
@@ -11,26 +11,26 @@ h4 {
   margin: 2px;
 }
 
-.y{
+.yellow{
   background-color: yellow;
 }
 
-.g{
+.green{
   background-color: green;
 }
 
-.b{
+.blue{
   background-color: blue;
 }
 
-.r{
+.red{
   background-color: red;
 }
 
-.p{
+.purple{
   background-color: purple;
 }
 
-.o{
+.orange{
   background-color: orange;
 }
