--- a/MasterMindMatt/masterMind.css
+++ b/MasterMindMatt/masterMind.css
@@ -13,24 +13,30 @@ h4 {
 
 .yellow{
   background-color: yellow;
+  color: yellow;
 }
 
 .green{
   background-color: green;
+  color: green;
 }
 
 .blue{
   background-color: blue;
+  color: blue;
 }
 
 .red{
   background-color: red;
+  color: red;
 }
 
 .purple{
   background-color: purple;
+  color: purple;
 }
 
 .orange{
   background-color: orange;
+  color: orange;
 }
